# UntitledProcgenRpg

./: Cargo.toml  README.md  TODO.txt
.github/workflows/: rust.yml
doc/: design.md
src/: entity.rs  main.rs
src/entity/: attack.rs  health.rs  mod.rs  movement.rs  player.rs
src/tests/: dialogue_box.rs
