[package]
name = "untitled_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_egui = "0.24.0"
# REMOVE THE DYNAMIC LINKING FEATURE WHEN WE RELEASE, THIS IS JUST SO COMPILES ARE FASTER WHILE TESTING
# REMOVE DYNAMIC LINKING AT RELEASE
[profile.dev]
#I SEE YOU MOVING TO THE NEXT LINE, IS DYNAMIC LINKING REMOVED
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
